Funcionalidad minima del trabajo, funciones testeadas. DataLoader con datos de prueba y estrategias cargadas.